--- a/exercicis/ex1.css
+++ b/exercicis/ex1.css
@@ -45,9 +45,7 @@ nav ul li a:hover {
 
 section {
     margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    text-align: center;
 }
 
 article {
@@ -57,7 +55,9 @@ article {
     margin: 10px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    float: left;
+    box-sizing: border-box;
+    margin-top: 20px;
 }
 
 article img {
@@ -95,18 +95,19 @@ article a:hover {
 }
 
 form label {
-    display: block;
     margin-bottom: 8px;
+    display: block;
 }
 
 form input,
 form textarea,
 form select {
-    width: 100%;
+    width: calc(100% - 16px);
     padding: 8px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 
 form button {
@@ -141,16 +142,4 @@ footer {
 .redes-sociales img {
     width: 30px;
     height: 30px;
-}
-
-/* estilos.css */
-body {
-    margin: 0;
-    padding: 0;
-}
-
-#imagen-esquinada {
-    top: 0;
-    right: 0;
-    margin: 10px;
 }
