--- a/exercicis/ex3.css
+++ b/exercicis/ex3.css
@@ -3,14 +3,14 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #f5f5f5;
+  background-color: #256972;
   color: #333;
 }
 
 header {
-  background-color: #003366;
+  background-color: #010230;
   color: #fff;
-  padding: 10px;
+  padding: 15px;
   text-align: center;
 }
 
@@ -62,10 +62,36 @@ nav a {
   height: 200px;
 }
 
-footer {
-  background-color: #003366;
-  color: #fff;
-  padding: 10px;
+.galeria {
   text-align: center;
-  margin-top: 20px;
+  margin: 40px 0;
 }
+
+.image-gallery img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+footer {
+  background-color: #010230;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.panorama-container {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  perspective: 1000px; /* Ajusta según sea necesario */
+}
+
+.panorama {
+  width: 100%;
+  height: 100%;
+  transform: rotateY(0deg);
+  transition: transform 0.5s ease-out; /* Ajusta según sea necesario */
+}
+
