--- a/index.css
+++ b/index.css
@@ -1,33 +1,148 @@
 body {
-    font-family: 'Arial', sans-serif;
     margin: 0;
-    padding: 0;
+    font-family: 'Arial', sans-serif;
+    background-color: #f7f7f7;
+    color: #333;
 }
 
 header {
-    background-color: #3498db;
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('tu_imagen.jpg') center/cover no-repeat;
     color: #fff;
     text-align: center;
-    padding: 1em;
+    padding: 20px;
+    position: relative;
+}
+
+.menu-toggle {
+    display: none;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 2;
+}
+
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 5px 0;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 nav a {
-    text-decoration: none;
     color: #fff;
-    margin: 0 10px;
-    font-weight: bold;
+    text-decoration: none;
+    padding: 15px;
+    transition: background-color 0.3s ease;
+}
+
+nav a:hover {
+    background-color: #555;
 }
 
 section {
     padding: 20px;
+    margin-top: 70px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+h2 {
+    color: #333;
+}
+
+.project-tiles, .exercise-tiles {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-around;
+}
+
+.project-tile, .exercise-tile {
+    width: 30%;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    transition: transform 0.3s ease;
+}
+
+.project-tile:hover, .exercise-tile:hover {
+    transform: scale(1.05);
 }
 
 footer {
-    background-color: #34495e;
+    background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 1em;
+    padding: 10px 0;
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+form {
+    display: grid;
+    grid-gap: 20px;
+}
+
+button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #555;
+}
+
+@media only screen and (max-width: 768px) {
+    .menu-toggle {
+        display: block;
+    }
+
+    nav {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: #333;
+        border-bottom: 2px solid #555;
+    }
+
+    nav.show {
+        display: flex;
+    }
+
+    nav a {
+        display: block;
+        padding: 15px;
+        text-align: center;
+    }
+
+    section {
+        margin-top: 20px;
+    }
 }
