--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #333; /* Negro */
-    color: #fff; /* Blanco */
+    background-color: #333;
+    color: #fff;
 }
 
 header {
@@ -11,6 +11,15 @@ header {
     text-align: center;
     padding: 20px;
     position: relative;
+}
+
+/* Estilo para los títulos de sección */
+.section-title {
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5em;
 }
 
 .menu-toggle {
@@ -35,7 +44,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #333; /* Negro */
+    background-color: #333;
     z-index: 1000;
     display: flex;
     justify-content: space-around;
@@ -50,35 +59,35 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #555; /* Gris oscuro */
+    background-color: #555;
 }
 
 section {
     padding: 20px;
     margin-top: 70px;
-    background-color: #f7f7f7; /* Gris claro */
+    background-color: #9b9b9b;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     margin-bottom: 20px;
-    color: #333; /* Gris oscuro */
+    color: #333;
 }
 
 h2 {
-    color: #333; /* Gris oscuro */
+    color: #333;
 }
 
 .about-me {
     max-width: 800px;
     margin: 0 auto;
-    background-color: #fff; /* Blanco */
+    background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     padding: 20px;
-    transition: transform 0.3s ease; /* Transición para el efecto de aumento */
+    transition: transform 0.3s ease;
 }
 
 .about-me:hover {
-    transform: scale(1.05); /* Aumenta al pasar el ratón */
+    transform: scale(1.05);
 }
 
 .photo-grid {
@@ -94,30 +103,34 @@ h2 {
     border-radius: 8px;
 }
 
-.project-tiles, .exercise-tiles {
+.project-tiles,
+.exercise-tiles {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-around;
 }
 
-.project-tile, .exercise-tile {
+.project-tile,
+.exercise-tile {
     width: calc(33.3333% - 20px);
     margin-right: 20px;
     padding: 20px;
-    border: 1px solid #ddd;
+    border: 1px solid #545454;
     border-radius: 8px;
     margin-bottom: 20px;
     transition: transform 0.3s ease;
+    background-color: #fff;
 }
 
-.project-tile:hover, .exercise-tile:hover {
+.project-tile:hover,
+.exercise-tile:hover {
     transform: scale(1.05);
 }
 
 footer {
-    background-color: #333; /* Negro */
-    color: #fff; /* Blanco */
+    background-color: #333;
+    color: #fff;
     text-align: center;
     padding: 10px 0;
     position: fixed;
@@ -131,8 +144,8 @@ form {
 }
 
 button {
-    background-color: #333; /* Negro */
-    color: #fff; /* Blanco */
+    background-color: #333;
+    color: #fff;
     border: none;
     padding: 10px 20px;
     cursor: pointer;
@@ -141,7 +154,7 @@ button {
 }
 
 button:hover {
-    background-color: #555; /* Gris oscuro */
+    background-color: #555;
 }
 
 .contact-info {
@@ -168,8 +181,8 @@ button:hover {
         top: 60px;
         left: 0;
         width: 100%;
-        background-color: #333; /* Negro */
-        border-bottom: 2px solid #555; /* Gris oscuro */
+        background-color: #333;
+        border-bottom: 2px solid #555;
     }
 
     nav.show {
@@ -186,11 +199,13 @@ button:hover {
         margin-top: 20px;
     }
 
-    .about-me, .photo-grid {
+    .about-me,
+    .photo-grid {
         margin-top: 10px;
     }
 
-    .project-tile, .exercise-tile {
+    .project-tile,
+    .exercise-tile {
         width: 100%;
         margin-right: 0;
         margin-bottom: 10px;
