--- a/exercicis/ex3.css
+++ b/exercicis/ex3.css
@@ -37,7 +37,7 @@ nav a {
   margin: 20px;
 }
 
-.column {
+.container > div {
   width: 45%;
   margin-bottom: 20px;
   padding: 20px;
@@ -45,7 +45,7 @@ nav a {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.column img {
+.container img {
   width: 100%;
   height: auto;
   margin-top: 10px;
@@ -60,17 +60,6 @@ nav a {
 .videotres iframe {
   width: 30%;
   height: 200px;
-}
-
-.galeria {
-  text-align: center;
-  margin: 40px 0;
-}
-
-.image-gallery img {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
 }
 
 footer {
@@ -95,3 +84,18 @@ footer {
   transition: transform 0.5s ease-out; /* Ajusta según sea necesario */
 }
 
+@media only screen and (max-width: 768px) {
+  .container > div {
+    width: 90%;
+  }
+
+  .videotres {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .videotres iframe {
+    width: 90%;
+    height: auto;
+  }
+}
